EomFileChooser: Use MateThumbnailFactory to create preview image

Do this if no thumbnail exists yet. Avoids displaying too large thumbs
for images that have yet to be thumbnailed, breaking the file open dialog.

https://bugzilla.gnome.org/show_bug.cgi?id=671944

taken from:
https://git.gnome.org/browse/eog/commit/?id=57116d5